@@ -1,6 +1,10 @@
 = Unreleased =
 # Fixed
 - Changed to use regular courier services for Estonian clients
+- It has been made so that the VAT number is not required for the registration of the shipment to the company
+
+# Improved
+- Added use of address 2 field value
 
 = 2.2.2 =
 # Fixed
